--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ roomVersion = "2.6.1"
 coroutinesVersion = "1.8.0"
 lifecycleVersion = "2.7.0"
 compilerKspVersion = "1.9.10-1.0.13"
+pdfViewerVersion = "2.8.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -29,6 +30,7 @@ androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = 
 androidx-room-ksp = { group = "androidx.room", name = "room-compiler", version.ref = "roomVersion" }
 androidx-lifecycle-viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycleVersion" }
 kotlinx-coroutines = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutinesVersion" }
+pdf-viewer = {group = "com.github.barteksc", name = "android-pdf-viewer", version.ref = "pdfViewerVersion"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
